--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,6 +1,6 @@
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, results = "asis")
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
 # Project1
